<resources>
    <string name="app_name">Noise Cancelling</string>

    <!-- Main menu -->
    <string name="action_nc_off">Turn off noise cancelling</string>
    <string name="action_settings">Choose device</string>
    <string name="action_nc_0">Noise cancelling level 0</string>
    <string name="action_nc_5">Noise cancelling level 5</string>
    <string name="action_nc_10">Noise cancelling level 10</string>
    <string name="action_pin_shortcut_nc_off">Add shortcut for NC off</string>
    <string name="action_pin_shortcut_nc_0">Add shortcut for NC 0</string>
    <string name="action_pin_shortcut_nc_5">Add shortcut for NC 5</string>
    <string name="action_pin_shortcut_nc_10">Add shortcut for NC 10</string>

    <!-- Main activity -->
    <string name="device_label">Configured Headphones</string>
    <string name="device_list_summary">⚠ (no headphones configured)</string>
    <string name="action_disable_noise_cancelling">Turn off noise cancelling</string>
    <string name="prompt_end">Only fully supports NC700 and QC35.  Only limited support for mode changes with QC Earbuds and QC45.  Noise cancelling will turn back on when you next start the headphones or press the Noise Control button on the left ear cup.</string>

    <!-- Settings -->
    <string name="disclaimer1_title">Disclaimer</string>
    <string name="disclaimer1_message">This product is provided \'AS IS\', the developer makes no warranties, accepts no liability, and hereby disclaims any implied warranties, including any warranty of merchantability and warranty of fitness for a particular purpose.</string>
    <string name="disclaimer1_accept">Accept No Warranty</string>
    <string name="disclaimer1_cancel">Cancel</string>

    <string name="disclaimer2_title">Risk</string>
    <string name="disclaimer2_message">This software sends a specific message to the device you choose.  This has only been tested on one specific pair of headphones of a single firmware version.  You accept liability for whatever happens, including any damage, injury, or loss.</string>
    <string name="disclaimer2_accept">Accept Liability</string>
    <string name="disclaimer2_cancel">Cancel</string>

    <string name="settings_device_type_700">Bose Noise Cancelling Headphones 700</string>
    <string name="settings_device_type_qc35">Bose QC35 headphones</string>
    <string name="settings_device_type_qce">Bose QC Earbuds</string>
    <string name="settings_device_type_qc45">Bose QC45 headphones</string>

    <string name="settings_choose_device_type">Type of new headphones:</string>
    <string name="settings_choose_device">Headphone device:</string>

    <!-- SendService -->
    <string name="send_nc_off">Turning off noise cancelling...</string>
    <string name="send_nc_0">Noise cancelling level 0...</string>
    <string name="send_nc_5">Noise cancelling level 5...</string>
    <string name="send_nc_10">Noise cancelling level 10...</string>

    <!-- Tile -->
    <string name="tile_name_nc_off">NC Off</string>
    <string name="tile_name_nc_0">NC Level 0</string>
    <string name="tile_name_nc_5">NC Level 5</string>
    <string name="tile_name_nc_10">NC Level 10</string>

    <!-- Shortcut -->
    <string name="nc_off_shortcut_short_label">NC Off</string>
    <string name="nc_off_shortcut_long_label">Noise Cancelling Off</string>
    <string name="nc_0_shortcut_short_label">NC 0</string>
    <string name="nc_0_shortcut_long_label">Noise Cancelling Level 0</string>
    <string name="nc_5_shortcut_short_label">NC 5</string>
    <string name="nc_5_shortcut_long_label">Noise Cancelling Level 5</string>
    <string name="nc_10_shortcut_short_label">NC 10</string>
    <string name="nc_10_shortcut_long_label">Noise Cancelling Level 10</string>

</resources>